--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,10 @@
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-    <h1 class="app-name">Boneare Café</h1>
+    <img src="/assets/img/boneare-logo.png" class="logo" alt="">
+    <h1 class="app-name">
+      Boneare Café
+    </h1>
 
     <span style="flex: 1"></span>
 
@@ -21,7 +24,8 @@
                  [opened]="navOpened"
                  class="mat-elevation-z4">
       <mat-nav-list style="width: 300px">
-        <a mat-list-item *ngFor="let item of menu; let i = index" [routerLink]="[item.url]" routerLinkActive="active" [routerLinkActiveOptions]="{exact: i === 0}">
+        <a mat-list-item *ngFor="let item of menu; let i = index" [routerLink]="[item.url]" routerLinkActive="active"
+           [routerLinkActiveOptions]="{exact: i === 0}">
           <mat-icon matListIcon>{{item.icon}}</mat-icon>
           <p matLine>{{item.title}}</p>
         </a>
