--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import '~@angular/material/theming';
+
 .container {
   display: flex;
   flex-direction: column;
@@ -16,7 +18,7 @@
 }
 
 h1.app-name {
-  margin-left: 8px;
+  margin-left: 16px;
 }
 
 .sidenav-container {
@@ -37,5 +39,11 @@ h1.app-name {
 }
 
 a.active {
-  color: #3f51b5;
+  color: map_get($mat-brown, 500);
+}
+
+.logo {
+  margin-left: 8px;
+  width: auto;
+  height: 40px;
 }
