--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,15 +5,15 @@
     </button>
     <img src="/assets/img/boneare-logo.png" class="logo" alt="">
     <h1 class="app-name">
-      Boneare Café
+      {{title}}
     </h1>
 
     <span style="flex: 1"></span>
 
     <span>
-      <button mat-icon-button>
+      <a mat-icon-button routerLink="/sign-in">
         <mat-icon>person</mat-icon>
-      </button>
+      </a>
     </span>
   </mat-toolbar>
 
@@ -23,7 +23,7 @@
                  [fixedInViewport]="mobileQuery.matches" [fixedTopGap]="56"
                  [opened]="navOpened"
                  class="mat-elevation-z4">
-      <mat-nav-list style="width: 300px">
+      <mat-nav-list class="nav-list">
         <a mat-list-item *ngFor="let item of menu; let i = index" [routerLink]="[item.url]" routerLinkActive="active"
            [routerLinkActiveOptions]="{exact: i === 0}">
           <mat-icon matListIcon>{{item.icon}}</mat-icon>
