--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,6 +19,7 @@
 
 h1.app-name {
   margin-left: 16px;
+  font-weight: 400;
 }
 
 .sidenav-container {
@@ -40,10 +41,18 @@ h1.app-name {
 
 a.active {
   color: map_get($mat-brown, 500);
+  p {
+    font-weight: 500;
+  }
 }
 
 .logo {
   margin-left: 8px;
   width: auto;
   height: 40px;
+}
+
+.nav-list a ::ng-deep .mat-list-item-content {
+  //width: 300px;
+  padding-right: 24px;
 }
