--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,7 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent);
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($candy-app-theme);
+
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 30px rgb(245, 245, 245) inset;
+}
