--- a/src/app/views/sign-in/sign-in.component.html
+++ b/src/app/views/sign-in/sign-in.component.html
@@ -1,6 +1,6 @@
 <form #formSignIn="ngForm" (submit)="onSubmit(formSignIn)">
     <mat-card>
-      <mat-progress-bar mode="query" *ngIf="loading"></mat-progress-bar>
+      <mat-progress-bar mode="query" [class.show]="loading"></mat-progress-bar>
       <mat-card-title>Boneare Café</mat-card-title>
       <mat-card-subtitle>Preenche com seu e-mail e senha para entrar</mat-card-subtitle>
       <mat-card-content class="container">
@@ -23,8 +23,8 @@
             <input matInput #passwordField="ngModel" name="password" [(ngModel)]="user.password"
                    [type]="showPassword ? 'text' : 'password'"
                    required [disabled]="loading">
-            <mat-icon matSuffix (click)="showPassword = !showPassword">{{showPassword ? 'visibility_off' :
-              'visibility'}}
+            <mat-icon matSuffix (click)="showPassword = !showPassword">
+              {{showPassword ? 'visibility_off' : 'visibility'}}
             </mat-icon>
             <mat-error *ngIf="passwordField.hasError('required')">
               Preencha com sua senha
