--- a/src/app/views/sign-in/sign-in.component.html
+++ b/src/app/views/sign-in/sign-in.component.html
@@ -15,6 +15,9 @@
             <mat-error *ngIf="emailField.hasError('required')">
               Preencha com seu e-mail
             </mat-error>
+            <mat-error *ngIf="emailField.hasError('notFound')">
+              Preencha com um e-mail <strong>existente</strong>
+            </mat-error>
           </mat-form-field>
         </p>
         <p>
@@ -28,6 +31,9 @@
             </mat-icon>
             <mat-error *ngIf="passwordField.hasError('required')">
               Preencha com sua senha
+            </mat-error>
+            <mat-error *ngIf="passwordField.hasError('wrong')">
+              Preencha a senha corretamente
             </mat-error>
           </mat-form-field>
         </p>
