Changing to a better word/phrase

--- a/src/app/dialogs/api-unavailable.dialog.html
+++ b/src/app/dialogs/api-unavailable.dialog.html
@@ -3,5 +3,5 @@
   <p>Não foi possível conectar com o servidor. Tente novamente mais tarde.</p>
 </div>
 <div mat-dialog-actions align="end">
-  <button mat-button color="primary" (click)="onTryAgainClick()" cdkFocusInitial>RECONECTAR</button>
+  <button mat-button color="primary" (click)="onTryAgainClick()" cdkFocusInitial>TENTAR NOVAMENTE</button>
 </div>
