--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,9 @@
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-    <img src="/assets/img/boneare-logo.png" class="logo" alt="">
+    <a routerLink="/" class="logo" >
+      <img src="/assets/img/boneare-logo.png" alt="">
+    </a>
     <h1 class="app-name">
       {{title}}
     </h1>
