--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,8 +48,11 @@ a.active {
 
 .logo {
   margin-left: 8px;
-  width: auto;
   height: 40px;
+  img {
+    width: auto;
+    height: 40px;
+  }
 }
 
 .nav-list a ::ng-deep .mat-list-item-content {
