--- a/src/app/views/sign-in/sign-in.component.scss
+++ b/src/app/views/sign-in/sign-in.component.scss
@@ -1,6 +1,12 @@
 :host {
   display: flex;
   justify-content: center;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  height: 100%;
+  align-items: center;
 }
 
 .container p > * {
