--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-    <a routerLink="/" class="logo" >
+    <a routerLink="/" class="logo">
       <img src="/assets/img/boneare-logo.png" alt="">
     </a>
     <h1 class="app-name">
@@ -13,9 +13,21 @@
     <span style="flex: 1"></span>
 
     <span>
-      <a mat-icon-button routerLink="/sign-in" *ngIf="!user">
+      <a mat-icon-button routerLink="/sign-in" *ngIf="!loading && readyToGo && !user">
         <mat-icon>person</mat-icon>
       </a>
+
+      <span *ngIf="!loading && readyToGo && user">
+        <button mat-icon-button class="user-button" [style.background-color]="user.color"
+                [style.color]="colorProvider.isBright(user.color) ? 'black' : 'white'" [matMenuTriggerFor]="userMenu">
+          <span *ngIf="!user.picture">{{user.name?.charAt(0)}}</span>
+        </button>
+        <mat-menu #userMenu="matMenu">
+          <button mat-menu-item (click)="signOut()">Sair</button>
+        </mat-menu>
+      </span>
+
+      <mat-spinner class="toolbar-loading" *ngIf="loading"></mat-spinner>
     </span>
   </mat-toolbar>
 
@@ -25,13 +37,14 @@
                  [fixedInViewport]="mobileQuery.matches" [fixedTopGap]="56"
                  [opened]="navOpened"
                  class="mat-elevation-z4">
+      <mat-progress-bar mode="indeterminate" *ngIf="loading"></mat-progress-bar>
       <mat-nav-list class="nav-list">
         <a mat-list-item routerLink="/" routerLinkActive="active"
            [routerLinkActiveOptions]="{exact: true}">
           <mat-icon matListIcon>home</mat-icon>
           <p matLine>Início</p>
         </a>
-        <a mat-list-item *ngIf="!user" routerLink="/sign-in" routerLinkActive="active">
+        <a mat-list-item *ngIf="!loading && readyToGo && !user" routerLink="/sign-in" routerLinkActive="active">
           <mat-icon matListIcon>person</mat-icon>
           <p matLine>Iniciar sessão</p>
         </a>
@@ -39,7 +52,12 @@
     </mat-sidenav>
 
     <mat-sidenav-content>
-      <router-outlet></router-outlet>
+      <div *ngIf="readyToGo">
+        <router-outlet></router-outlet>
+      </div>
+      <div *ngIf="loading" class="page-loading">
+        <mat-spinner></mat-spinner>
+      </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
