--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,14 +40,21 @@
       <mat-progress-bar mode="indeterminate" *ngIf="loading"></mat-progress-bar>
       <mat-nav-list class="nav-list">
         <a mat-list-item routerLink="/" routerLinkActive="active"
-           [routerLinkActiveOptions]="{exact: true}">
+           [routerLinkActiveOptions]="{exact: true}" (click)="mobileQuery.matches && snav.close()">
           <mat-icon matListIcon>home</mat-icon>
           <p matLine>Início</p>
         </a>
-        <a mat-list-item *ngIf="!loading && readyToGo && !user" routerLink="/sign-in" routerLinkActive="active">
+        <a mat-list-item *ngIf="!loading && readyToGo && !user" routerLink="/sign-in" routerLinkActive="active"
+           (click)="mobileQuery.matches && snav.close()">
           <mat-icon matListIcon>person</mat-icon>
           <p matLine>Iniciar sessão</p>
         </a>
+        <div *ngIf="!loading && readyToGo && user">
+          <a mat-list-item routerLink="/clients" routerLinkActive="active" (click)="mobileQuery.matches && snav.close()">
+            <mat-icon matListIcon>group</mat-icon>
+            <p matLine>Clientes</p>
+          </a>
+        </div>
       </mat-nav-list>
     </mat-sidenav>
 
