--- a/src/app/views/client/list/client-list.component.scss
+++ b/src/app/views/client/list/client-list.component.scss
@@ -1,3 +1,46 @@
 table {
   width: 100%;
 }
+
+:host {
+  padding: 16px;
+  display: block;
+}
+
+:host-context(.is-mobile) {
+  padding: initial;
+}
+
+.fab-container {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  z-index: 100;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+}
+
+.search {
+  padding: 16px;
+
+  & > * {
+    width: 100%;
+  }
+
+  ::ng-deep .mat-form-field-wrapper {
+    padding-bottom: 0;
+  }
+}
+
+mat-progress-bar {
+  position: absolute;
+  width: 100%;
+}
+
+.fab-container-space {
+  height: 74px;
+}
+:host-context(.is-mobile) .fab-container-space {
+  height: 82px;
+}
