--- a/src/app/views/client/list/client-list.component.html
+++ b/src/app/views/client/list/client-list.component.html
@@ -1,4 +1,4 @@
-<div class="lessons-table mat-elevation-z8">
+<div class="table mat-elevation-z8">
   <div class="spinner-container" *ngIf="dataSource.loading$ | async">
     <mat-progress-bar mode="indeterminate"></mat-progress-bar>
   </div>
@@ -6,7 +6,7 @@
   <div class="search">
     <mat-form-field appearance="outline">
       <mat-label>Pesquisa</mat-label>
-      <input matInput placeholder="Digite nome do cliente ou CPF" #input>
+      <input matInput placeholder="Digite o número ou nome" #input type="search" name="search">
       <mat-icon matPrefix>search</mat-icon>
     </mat-form-field>
   </div>
@@ -15,27 +15,38 @@
 
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 38px">#</th>
-      <td mat-cell *matCellDef="let lesson">{{lesson.id}}</td>
+      <td mat-cell *matCellDef="let item">{{item.id}}</td>
     </ng-container>
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
       <td mat-cell class="description-cell"
-                *matCellDef="let lesson">{{lesson.name}}
+          *matCellDef="let item">{{item.name}}
       </td>
-
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 
     <tr mat-row *matRowDef="let row; columns: displayedColumns"
-             (click)="onRowClicked(row)">
+        (click)="onRowClicked(row)" [routerLink]="['/client', row.id]">
     </tr>
-
   </table>
 
-  <mat-paginator [length]="lessonsCount" [pageSize]="10"
+  <mat-paginator [length]="totalLinesCount" [pageSize]="10"
                  [pageSizeOptions]="[10, 50, 100]"></mat-paginator>
+
+  <mat-toolbar color="primary" *ngIf="!(dataSource.loading$ | async) && totalLinesCount == 0">
+    Nenhum resultado encontrado
+    <span style="flex: 1"></span>
+    <button mat-icon-button (click)="loadPage()">
+      <mat-icon>refresh</mat-icon>
+    </button>
+  </mat-toolbar>
+  <mat-toolbar color="primary" *ngIf="!(dataSource.loading$ | async) && totalLinesCount == null">
+    Não foi possível carregar
+    <span style="flex: 1"></span>
+    <button mat-flat-button (click)="loadPage()">TENTAR NOVAMENTE</button>
+  </mat-toolbar>
 </div>
 
 <div class="fab-container-space"></div>
