--- a/src/app/views/client/list/client-list.component.scss
+++ b/src/app/views/client/list/client-list.component.scss
@@ -2,6 +2,10 @@ table {
   width: 100%;
 }
 
+.table {
+  position: relative;
+}
+
 :host {
   padding: 16px;
   display: block;
@@ -22,6 +26,7 @@ table {
 }
 
 .search {
+  background-color: white;
   padding: 16px;
 
   & > * {
