--- a/src/app/views/client/list/client-list.component.html
+++ b/src/app/views/client/list/client-list.component.html
@@ -50,8 +50,11 @@
 </div>
 
 <div class="fab-container-space"></div>
-<div class="fab-container">
-  <a mat-fab color="accent" routerLink="/client/add">
-    <i class="material-icons">add</i>
-  </a>
-</div>
+
+<app-fnls-displacer>
+  <div class="fab-container">
+    <a mat-fab color="accent" routerLink="/client/add">
+      <i class="material-icons">add</i>
+    </a>
+  </div>
+</app-fnls-displacer>
