--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,8 @@ input:-webkit-autofill {
 body {
   font-family: Roboto,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
 }
+
+.mat-success {
+  background-color: map_get(mat-palette($mat-green), 500);
+  color: #fff;
+}
