--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
 //@import "~@angular/material/prebuilt-themes/indigo-pink.css";
-
 @import '~@angular/material/theming';
 
 @include mat-core();
@@ -10,7 +8,7 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $candy-app-primary: mat-palette($mat-brown);
-$candy-app-accent:  mat-palette($mat-yellow, A200, A100, A400);
+$candy-app-accent: mat-palette($mat-yellow, A200, A100, A400);
 
 // Create the theme object (a Sass map containing all of the palettes).
 $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent);
@@ -25,10 +23,21 @@ input:-webkit-autofill {
 }
 
 body {
-  font-family: Roboto,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+  font-family: Roboto, "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
 .mat-success {
   background-color: map_get(mat-palette($mat-green), 500);
   color: #fff;
+}
+
+.mat-menu-header {
+  padding: 16px;
+  font-weight: 500;
+}
+
+.ellipsis {
+  text-overflow:ellipsis;
+  white-space:nowrap;
+  overflow:hidden;
 }
