--- a/src/app/views/client/list/client-list.component.html
+++ b/src/app/views/client/list/client-list.component.html
@@ -53,7 +53,7 @@
 
 <app-fnls-displacer>
   <div class="fab-container">
-    <a mat-fab color="accent" routerLink="/client/add">
+    <a mat-fab color="accent" routerLink="/client/add" matTooltip="Novo cliente" matTooltipPosition="above">
       <i class="material-icons">add</i>
     </a>
   </div>
