--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <a routerLink="/" class="logo">
       <img src="/assets/img/boneare-logo.png" alt="">
     </a>
-    <h1 class="app-name">
+    <h1 class="app-name ellipsis">
       {{title}}
     </h1>
 
@@ -23,6 +23,8 @@
           <span *ngIf="!user.picture">{{user.name?.charAt(0)}}</span>
         </button>
         <mat-menu #userMenu="matMenu">
+          <div class="mat-menu-header">{{user.name}}</div>
+          <mat-divider></mat-divider>
           <button mat-menu-item (click)="signOut()">Sair</button>
         </mat-menu>
       </span>
@@ -50,7 +52,7 @@
           <p matLine>Iniciar sessão</p>
         </a>
         <div *ngIf="!loading && readyToGo && user">
-          <a mat-list-item routerLink="/clients" routerLinkActive="active"
+          <a mat-list-item routerLink="/client" routerLinkActive="active"
              (click)="mobileQuery.matches && snav.close()">
             <mat-icon matListIcon>group</mat-icon>
             <p matLine>Clientes</p>
