--- a/src/app/views/client/info/client-info.component.html
+++ b/src/app/views/client/info/client-info.component.html
@@ -1,13 +1,18 @@
 <div class="center">
   <form #formInfo="ngForm" (submit)="onSubmit(formInfo)">
-    <mat-toolbar class="mat-elevation-z8">
+    <mat-toolbar>
       <!--<mat-card-title>-->
+      <a mat-icon-button type="button" [disabled]="loading" routerLink="/client" matTooltip="Ir para lista"
+         matTooltipPosition="below">
+        <mat-icon>arrow_back</mat-icon>
+      </a>
       <span *ngIf="!info.id">Novo cliente</span>
       <span *ngIf="info.id" [title]="info.name" class="ellipsis">
           {{(info.name?.length > 40 ? (info.name | slice:0:40) + '...' : info.name)}}
         </span>
       <span style="flex: 1"></span>
-      <button mat-icon-button type="button" *ngIf="info.id" [matMenuTriggerFor]="removeMenu" [disabled]="loading">
+      <button mat-icon-button type="button" *ngIf="info.id" [matMenuTriggerFor]="removeMenu" [disabled]="loading"
+              matTooltip="Excluir cliente" matTooltipPosition="below">
         <mat-icon>delete</mat-icon>
       </button>
       <mat-menu #removeMenu="matMenu">
@@ -17,34 +22,101 @@
       </mat-menu>
       <!--</mat-card-title>-->
     </mat-toolbar>
-    <mat-card class="mat-elevation-z8">
-      <mat-progress-bar mode="query" [class.show]="loading"></mat-progress-bar>
-      <mat-card-content class="container">
+    <mat-accordion>
+      <mat-expansion-panel #expansionOne [expanded]="true">
+        <mat-progress-bar mode="query" [class.show]="loading"></mat-progress-bar>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Informações <i *ngIf="!expansionOne.expanded && formInfo.touched && formInfo.invalid">contém campo inválido</i>
+            <!--TODO: Check every input for validation-->
+          </mat-panel-title>
+        </mat-expansion-panel-header>
         <p>
           <mat-form-field appearance="fill">
             <mat-label>Nome</mat-label>
             <input matInput #nameField="ngModel" name="name" [(ngModel)]="info.name" type="text" required
+                   maxlength="100"
                    [disabled]="loading">
+            <mat-hint align="end" *ngIf="info.name?.length >= 100">{{info.name?.length || 0}}/100</mat-hint>
             <mat-error *ngIf="nameField.hasError('required')">
               Preencha com o nome
             </mat-error>
           </mat-form-field>
         </p>
-        <p style="opacity: 0.6" *ngIf="info.createdBy">
-          Criado por {{info.createdBy}} em
-          <span [title]="info.creationDate | date : 'full'">{{info.creationDate | date : 'medium'}}</span>
-          <span *ngIf="info.updatedBy">
+        <p>
+          <mat-form-field appearance="fill">
+            <mat-label>Razão social</mat-label>
+            <input matInput #companyNameField="ngModel" name="companyName" [(ngModel)]="info.companyName" type="text"
+                   maxlength="100"
+                   [disabled]="loading">
+            <mat-hint align="end" *ngIf="info.companyName?.length >= 100">{{info.companyName?.length || 0}}/100
+            </mat-hint>
+          </mat-form-field>
+        </p>
+      </mat-expansion-panel>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Endereço
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <p>
+          <mat-form-field appearance="fill">
+            <mat-label>Endereço</mat-label>
+            <input matInput #phoneNumberField="ngModel" name="newPhoneNumber" [(ngModel)]="info.address.address"
+                   type="text"
+                   [disabled]="loading">
+          </mat-form-field>
+        </p>
+      </mat-expansion-panel>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Telefones
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <p *ngFor="let phone of info.phones; let i = index">
+          <mat-form-field appearance="fill">
+            <mat-label>Telefone</mat-label>
+            <input matInput #phoneNumberField="ngModel" [name]="'phoneNumber' + i" [(ngModel)]="phone.number"
+                   type="text"
+                   [disabled]="loading">
+            <button mat-icon-button type="button" matSuffix class="show-on-hover">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </mat-form-field>
+        </p>
+        <p>
+          <mat-form-field appearance="fill">
+            <mat-label>Novo telefone</mat-label>
+            <input matInput #phoneNumberField="ngModel" name="newPhoneNumber" [(ngModel)]="info.phones.newPhone.number"
+                   type="text"
+                   [disabled]="loading">
+            <button mat-icon-button type="button" matSuffix
+                    (click)="info.phones.push(info.phones.newPhone); info.phones.newPhone = {}"
+                    matTooltip="Adicionar telefone" matTooltipPosition="above">
+              <mat-icon>add</mat-icon>
+            </button>
+          </mat-form-field>
+        </p>
+      </mat-expansion-panel>
+    </mat-accordion>
+
+    <mat-toolbar *ngIf="!appComponent.mobileQuery.matches">
+      <span style="flex: 1"></span>
+      <button mat-raised-button color="success" [disabled]="loading">{{!info.id ? 'ADICIONAR' : 'SALVAR'}}</button>
+    </mat-toolbar>
+
+    <mat-card class="manut mat-elevation-z0" *ngIf="info.createdBy">
+      Criado por {{info.createdBy}} em
+      <span [title]="info.creationDate | date : 'full'">{{info.creationDate | date : 'medium'}}</span>
+      <span *ngIf="info.updatedBy">
             <br>Alterado por {{info.updatedBy}} em
             <span [title]="info.lastUpdateDate | date : 'full'">{{info.lastUpdateDate | date : 'medium'}}</span>
           </span>
-        </p>
-      </mat-card-content>
-      <mat-card-actions align="right" *ngIf="!appComponent.mobileQuery.matches">
-        <button mat-flat-button color="success" [disabled]="loading">{{!info.id ? 'ADICIONAR' : 'SALVAR'}}</button>
-      </mat-card-actions>
     </mat-card>
 
-    <!--<pre>{{info | json}}</pre>-->
+    <pre>{{info | json}}</pre>
   </form>
 </div>
 
