--- a/src/app/views/client/info/client-info.component.html
+++ b/src/app/views/client/info/client-info.component.html
@@ -27,7 +27,8 @@
         <mat-progress-bar mode="query" [class.show]="loading"></mat-progress-bar>
         <mat-expansion-panel-header>
           <mat-panel-title>
-            Informações <i *ngIf="!expansionOne.expanded && nameField.touched && nameField.invalid">contém campo
+            Informações <i *ngIf="!expansionOne.expanded && formInfo.dirty && formInfo.touched && formInfo.invalid">contém
+            campo
             inválido</i>
           </mat-panel-title>
         </mat-expansion-panel-header>
@@ -165,8 +166,9 @@
           <mat-form-field appearance="fill">
             <mat-label>Telefone</mat-label>
             <input matInput #phoneNumberField="ngModel" [name]="'phoneNumber' + i" [(ngModel)]="phone.number"
-                   type="text" [mask]="(phone.number + '').length == 11 ? '(00) 0 0000-0000' : '(00) 0000-00000'" [disabled]="loading">
-            <button mat-icon-button type="button" matSuffix class="show-on-hover" (click)="info.phones.splice(i, 1)">
+                   type="text" maskPhone [disabled]="loading">
+            <button mat-icon-button type="button" matSuffix class="show-on-hover" (click)="info.phones.splice(i, 1)"
+                    matTooltip="Remover telefone" matTooltipPosition="above">
               <mat-icon>delete</mat-icon>
             </button>
           </mat-form-field>
@@ -174,16 +176,75 @@
         <p>
           <mat-form-field appearance="fill">
             <mat-label>Novo telefone</mat-label>
-            <input matInput #phoneNumberField="ngModel" name="newPhoneNumber" [(ngModel)]="info.phones.newPhone.number"
-                   type="text" [mask]="(info.phones.newPhone.number + '').length == 11 ? '(00) 0 0000-0000' : '(00) 0000-00000'" [disabled]="loading">
+            <input matInput #newPhoneNumberField="ngModel" name="newPhoneNumber"
+                   [(ngModel)]="info.phones.newPhone.number"
+                   type="text" [disabled]="loading" maskPhone>
             <button mat-icon-button type="button" matSuffix
-                    (click)="info.phones.push(info.phones.newPhone); info.phones.newPhone.number = null; changeDetectorRef.detectChanges()"
+                    (click)="this.info.phones.push(this.info.phones.newPhone); this.info.phones.newPhone = {}"
                     matTooltip="Adicionar telefone" matTooltipPosition="above">
               <!--TODO: Still not removing-->
               <mat-icon>add</mat-icon>
             </button>
           </mat-form-field>
         </p>
+      </mat-expansion-panel>
+      <mat-expansion-panel #expansionFour>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            E-mails <i *ngIf="checkExpansionInvalid(expansionFour)">contém campo inválido</i>
+            <!--TODO: Problema do changed before checked-->
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+
+        <smart-list #emailList [model]="info.emails">
+          <smart-list-item *ngFor="let email of emailList.list; let i = index;">
+            <p>
+              <mat-form-field appearance="fill">
+                <mat-label>E-mail</mat-label>
+                <input matInput #emailField="ngModel" [name]="'email' + i" [(ngModel)]="email.email"
+                       type="email" [disabled]="loading" [email]="true">
+                <mat-error *ngIf="emailField.hasError('email')">
+                  Preencha com um e-mail <strong>válido</strong>
+                </mat-error>
+                <button mat-icon-button type="button" matSuffix class="show-on-hover"
+                        *ngIf="i < emailList.list.length - 1" (click)="emailList.remove(i);"
+                        matTooltip="Remover e-mail" matTooltipPosition="above">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </mat-form-field>
+            </p>
+          </smart-list-item>
+        </smart-list>
+
+        <!--<p *ngFor="let email of info.emails; let i = index">
+          <mat-form-field appearance="fill">
+            <mat-label>E-mail</mat-label>
+            <input matInput #emailField="ngModel" [name]="'email' + i" [(ngModel)]="email.email"
+                   type="email" [disabled]="loading" [email]="true">
+            <mat-error *ngIf="emailField.hasError('email')">
+              Preencha com um e-mail <strong>válido</strong>
+            </mat-error>
+            <button mat-icon-button type="button" matSuffix class="show-on-hover" (click)="info.emails.splice(i, 1)"
+                    matTooltip="Remover e-mail" matTooltipPosition="above">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </mat-form-field>
+        </p>
+        <p>
+          <mat-form-field appearance="fill">
+            <mat-label>Novo e-mail</mat-label>
+            <input matInput #newEmailField="ngModel" name="newEmail" [(ngModel)]="info.emails.newEmail.email"
+                   type="email" [disabled]="loading" [email]="true">
+            <mat-error *ngIf="newEmailField.hasError('email')">
+              Preencha com um e-mail <strong>válido</strong>
+            </mat-error>
+            <button mat-icon-button type="button" matSuffix
+                    (click)="this.info.emails.push(this.info.emails.newEmail); this.info.emails.newEmail = {}"
+                    matTooltip="Adicionar e-mail" matTooltipPosition="above">
+              <mat-icon>add</mat-icon>
+            </button>
+          </mat-form-field>
+        </p>-->
       </mat-expansion-panel>
     </mat-accordion>
 
