--- a/src/app/views/order/info/order-info.component.html
+++ b/src/app/views/order/info/order-info.component.html
@@ -1,3 +1,4 @@
+<!--suppress JSUnresolvedVariable, HtmlFormInputWithoutLabel -->
 <div class="center">
   <form #formInfo="ngForm" (submit)="onSubmit(formInfo)">
     <mat-toolbar>
@@ -24,42 +25,66 @@
     </mat-toolbar>
     <div class="card-space">
       <mat-progress-bar mode="query" [class.show]="loading"></mat-progress-bar>
-      <mat-card>
-        <p>
-          <mat-form-field appearance="fill">
-            <mat-label>Nome</mat-label>
-            <!--suppress HtmlFormInputWithoutLabel -->
-            <input matInput #nameField="ngModel" name="name" [(ngModel)]="info.name" type="text" required
-                   maxlength="100" [disabled]="loading">
-            <mat-error *ngIf="nameField.hasError('required')">
-              Preencha com o nome
-            </mat-error>
-          </mat-form-field>
-        </p>
-        <p>
-          <mat-form-field appearance="fill">
-            <mat-label>Peso da unidade</mat-label>
-            <!--suppress JSUnresolvedVariable -->
-            <input matInput #unitWeightField="ngModel" name="unitWeight" [(ngModel)]="info.unitWeight" type="text"
-                   required currencyMask [options]="{ prefix: '', suffix: 'kg', thousands: '.', decimal: ',' }"
-                   placeholder="Em quilogramas" [disabled]="loading">
-            <mat-error *ngIf="unitWeightField.hasError('required')">
-              Preencha com o peso da unidade
-            </mat-error>
-          </mat-form-field>
-        </p>
-        <p>
-          <mat-form-field appearance="fill">
-            <mat-label>Valor</mat-label>
-            <input matInput #priceField="ngModel" name="price" [(ngModel)]="info.price" type="text"
-                   required currencyMask [options]="{ prefix: 'R$ ', suffix: '', thousands: '.', decimal: ',' }"
-                   placeholder="Em reais" [disabled]="loading">
-            <mat-error *ngIf="priceField.hasError('required')">
-              Preencha com o preço
-            </mat-error>
-          </mat-form-field>
-        </p>
-      </mat-card>
+      <mat-accordion>
+        <mat-expansion-panel #expansionOne [expanded]="true">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Pedido
+              <i *ngIf="!expansionOne.expanded && nameField.dirty && nameField.touched && nameField.invalid">
+                contém campo inválido
+              </i>
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <p>
+            <mat-form-field appearance="fill">
+              <mat-label>Nome</mat-label>
+              <input matInput #nameField="ngModel" name="name" [(ngModel)]="info.name" type="text" required
+                     maxlength="100" [disabled]="loading">
+              <mat-hint align="end" *ngIf="info.name?.length >= 100">{{info.name?.length || 0}}/100</mat-hint>
+              <mat-error *ngIf="nameField.hasError('required')">
+                Preencha com o nome
+              </mat-error>
+            </mat-form-field>
+          </p>
+          <p>
+            <mat-form-field appearance="fill">
+              <mat-label>Cliente</mat-label>
+              <input matInput #clientFieldEl #clientField="ngModel" name="client" type="text" placeholder="Escolha um cliente"
+                     [(ngModel)]="clientSelected" [matAutocomplete]="clientAutocomplete"
+                     (keyup)="clientAutocompleteFilter(clientFieldEl.value)" (focus)="subPanelScroll()">
+              <mat-autocomplete #clientAutocomplete="matAutocomplete" [displayWith]="clientDisplayFn">
+                <mat-option *ngFor="let client of clients" [value]="client">
+                  {{client.name}}
+                </mat-option>
+              </mat-autocomplete>
+              <mat-spinner matSuffix *ngIf="clients.loading"></mat-spinner>
+            </mat-form-field>
+          </p>
+        </mat-expansion-panel>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Transações
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <smart-list #phoneList [model]="info.transactions">
+            <smart-list-item *ngFor="let phone of phoneList.list; let i = index;">
+              <p>
+                <mat-form-field appearance="fill">
+                  <mat-label>Telefone</mat-label>
+                  <input matInput #phoneNumberField="ngModel" [name]="'phoneNumber' + i" [(ngModel)]="phone.number"
+                         type="text" maskPhone [disabled]="loading">
+                  <button mat-icon-button type="button" matSuffix class="show-on-hover"
+                          *ngIf="i < phoneList.list.length - 1" (click)="phoneList.remove(i);"
+                          matTooltip="Remover telefone" matTooltipPosition="above">
+                    <mat-icon>delete</mat-icon>
+                  </button>
+                </mat-form-field>
+              </p>
+            </smart-list-item>
+          </smart-list>
+        </mat-expansion-panel>
+      </mat-accordion>
     </div>
 
     <mat-toolbar *ngIf="!appComponent.mobileQuery.matches">
@@ -76,7 +101,7 @@
           </span>
     </mat-card>
 
-    <!--<pre>{{info | json}}</pre>-->
+    <pre>{{info | json}}</pre>
   </form>
 </div>
 
