--- a/src/app/views/order/list/order-list.component.html
+++ b/src/app/views/order/list/order-list.component.html
@@ -1,3 +1,4 @@
+<!--suppress JSUnresolvedVariable, UnnecessaryLabelJS, HtmlUnknownAttribute -->
 <div class="table mat-elevation-z2">
   <div class="spinner-container" *ngIf="dataSource.loading$ | async">
     <mat-progress-bar mode="indeterminate"></mat-progress-bar>
@@ -16,6 +17,7 @@
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 38px">#</th>
       <td mat-cell *matCellDef="let item">{{item.id}}</td>
+      <td mat-footer-cell *matFooterCellDef>Total</td>
     </ng-container>
 
     <ng-container matColumnDef="name">
@@ -23,6 +25,7 @@
       <td mat-cell class="description-cell"
           *matCellDef="let item">{{item.name}}
       </td>
+      <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
 
     <ng-container matColumnDef="client">
@@ -30,13 +33,13 @@
       <td mat-cell class="description-cell"
           *matCellDef="let item">{{item.client}}
       </td>
+      <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
 
     <ng-container matColumnDef="totalCost">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Preço</th>
-      <!--suppress JSUnresolvedVariable -->
-      <td mat-cell *matCellDef="let item">{{item.totalCost}}</td>
-      <td mat-footer-cell *matFooterCellDef>{{totalCostAll}}</td>
+      <td mat-cell *matCellDef="let item">{{item.totalCost | currency : 'R$'}}</td>
+      <td mat-footer-cell *matFooterCellDef>{{totalCostAll | currency : 'R$'}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
